--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <script type="module" src="app.js"></script>
-    <script type="module">
+    <!-- <script type="module">
         import * as THREE from 'https://cdn.jsdelivr.net/npm/three@latest/build/three.module.js';
     
         // Your Three.js code here
@@ -37,7 +37,7 @@
             renderer.render(scene, camera);
         }
         animate();
-    </script>
+    </script> -->
     
 </body>
 </html>
